DigicielFull/force-app/main/default/objects/Contact/fields/Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country__c</fullName>
    <formula>Text(Account.Billing_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Country</label>
    <type>Text</type>
</CustomField>