DigicielFull/force-app/main/default/objects/Contact/fields/Company_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Company_Anniversary__c</fullName>
    <label>Company Anniversary</label>
    <type>Date</type>
</CustomField>