DigicielFull/force-app/main/default/objects/Contact/fields/Contact_Id_Digicel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Digicel__c</fullName>
    <label>Contact Id (Digicel)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>