DigicielFull/force-app/main/default/objects/Contact/fields/Contact_Lead_GSM_ICT__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_GSM_ICT__c</fullName>
    <label>Contact Lead GSM/ICT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>