DigicielFull/force-app/main/default/objects/Contact/fields/Contact_Rank__c.field-meta.xml
<CustomField>
    <fullName>Contact_Rank__c</fullName>
    <label>Contact Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>