DigicielFull/force-app/main/default/objects/Contact/fields/Contact_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ranking__c</fullName>
    <formula>IF (Contact_Score__c &lt;=30, IMAGE(&quot;/img/samples/stars_100.gif&quot;,&quot;1 Star&quot;),

IF (Contact_Score__c &lt;=50, IMAGE(&quot;/img/samples/stars_200.gif&quot;,&quot;2 Star&quot;),

IF (Contact_Score__c &lt;=70, IMAGE(&quot;/img/samples/stars_300.gif&quot;,&quot;3 Star&quot;),

IF (Contact_Score__c &lt;=90, IMAGE(&quot;/img/samples/stars_400.gif&quot;,&quot;4 Star&quot;),

IMAGE(&quot;/img/samples/stars_500.gif&quot;,&quot;5 Star&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Ranking</label>
    <type>Text</type>
</CustomField>