DigicielFull/force-app/main/default/objects/Contact/fields/Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Score__c</fullName>
    <formula>If( ISPICKVAL( Salutation , &quot;&quot;),0,10)+ 

If(ISBLANK(FirstName),0,10)+ 

If(ISBLANK( ReportsToId ),0,10)+ 

If(ISBLANK(Title),0,10)+ 

If( ISPICKVAL( Title_Category__c , &quot;&quot;),0,10)+ 

If(AND(ISBLANK( Mailing_Street_1__c ), ISBLANK(  MailingAddress )),0,10)+ 

If(AND(ISBLANK( Mailing_Street_2__c ), ISBLANK(  MailingAddress )),0,10)+ 

If(ISBLANK(Email),0,20)+ 

If(ISBLANK(Phone),0,10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>