DigicielFull/force-app/main/default/objects/Contact/fields/Contact_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Service_Type__c</fullName>
    <label>Contact Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>