DigicielFull/force-app/main/default/objects/Contact/fields/CREATEDBYID_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>CREATEDBYID_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CREATEDBYID_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contacts (CREATEDBYID_MIGRATION)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>