DigicielFull/force-app/main/default/objects/Contact/fields/Customer_Care_Agent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Agent__c</fullName>
    <label>Customer Care Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>