DigicielFull/force-app/main/default/objects/Contact/fields/Day_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Day_Birthday__c</fullName>
    <formula>Day(Birthdate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>