DigicielFull/force-app/main/default/objects/Contact/fields/Email_textarea__c.field-meta.xml
<CustomField>
    <fullName>Email_textarea__c</fullName>
    <label>Email Text</label>
    <type>TextArea</type>
</CustomField>