DigicielFull/force-app/main/default/objects/Contact/fields/Expatriate_Worker__c.field-meta.xml
<CustomField>
    <fullName>Expatriate_Worker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expatriate Worker?</label>
    <type>Checkbox</type>
</CustomField>