DigicielFull/force-app/main/default/objects/Contact/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IDD</fullName>
            </value>
            <value>
                <fullName>Restricted Roaming</fullName>
            </value>
            <value>
                <fullName>Universal Roaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>