DigicielFull/force-app/main/default/objects/Contact/fields/Handset_Make_and_Model__c.field-meta.xml
<CustomField>
    <fullName>Handset_Make_and_Model__c</fullName>
    <label>Handset Make and Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>