DigicielFull/force-app/main/default/objects/Contact/fields/Handset_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Handset_Provided_By__c</fullName>
    <label>Handset Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>