DigicielFull/force-app/main/default/objects/Contact/fields/LASTMODIFIEDBYID_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBYID_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LASTMODIFIEDBYID_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contacts (LASTMODIFIEDBYID_MIGRATION)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>