DigicielFull/force-app/main/default/objects/Contact/fields/Loadcode__c.field-meta.xml
<CustomField>
    <fullName>Loadcode__c</fullName>
    <label>Loadcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>