DigicielFull/force-app/main/default/objects/Contact/fields/Mailing_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_1__c</fullName>
    <label>Mailing Street 1</label>
    <type>TextArea</type>
</CustomField>