DigicielFull/force-app/main/default/objects/Contact/fields/Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Name_Account__c</fullName>
    <formula>TRIM(FirstName) + &apos; &apos; +TRIM(LastName)+&apos; | &apos; +TRIM( Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name &amp; Account</label>
    <type>Text</type>
</CustomField>