DigicielFull/force-app/main/default/objects/Contact/fields/No_Longer_with_Company__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_with_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Longer with Company</label>
    <type>Checkbox</type>
</CustomField>