DigicielFull/force-app/main/default/objects/Contact/fields/Other_City__c.field-meta.xml
<CustomField>
    <fullName>Other_City__c</fullName>
    <label>Other City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>