DigicielFull/force-app/main/default/objects/Contact/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Id__c</fullName>
    <label>Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>