DigicielFull/force-app/main/default/objects/Contact/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <formula>Account.Parent.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>