DigicielFull/force-app/main/default/objects/Contact/fields/Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan__c</fullName>
    <label>Rate Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>