DigicielFull/force-app/main/default/objects/Contact/fields/Roaming_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Roaming_Deposit__c</fullName>
    <label>Roaming Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>