DigicielFull/force-app/main/default/objects/Contact/fields/Spouse_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Birthday__c</fullName>
    <label>Spouse Birthday</label>
    <type>Date</type>
</CustomField>