DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_Fiji_ICT.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Fiji_ICT</fullName>
    <active>true</active>
    <label>Digicel Fiji ICT</label>
</RecordType>