DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_Jamaica_Digicel_Business.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Jamaica_Digicel_Business</fullName>
    <active>true</active>
    <label>Digicel Jamaica GSM</label>
</RecordType>