DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_Martinique_ICT.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Martinique_ICT</fullName>
    <active>true</active>
    <label>Digicel Martinique ICT</label>
</RecordType>