DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_PNG_ICT.recordType-meta.xml
<RecordType>
    <fullName>Digicel_PNG_ICT</fullName>
    <active>true</active>
    <label>Digicel PNG ICT</label>
</RecordType>