DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_Tonga_GSM.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Tonga_GSM</fullName>
    <active>true</active>
    <label>Digicel Tonga GSM</label>
</RecordType>