DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_Tonga_ICT.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Tonga_ICT</fullName>
    <active>true</active>
    <label>Digicel Tonga ICT</label>
</RecordType>