DigicielFull/force-app/main/default/objects/Contact/recordTypes/Digicel_Vanuatu_ICT.recordType-meta.xml
<RecordType>
    <fullName>Digicel_Vanuatu_ICT</fullName>
    <active>true</active>
    <label>Digicel Vanuatu ICT</label>
</RecordType>