DigicielFull/force-app/main/default/objects/Contact/recordTypes/PNG_DigicelPngIctAndGsm.recordType-meta.xml
<RecordType>
    <fullName>PNG_DigicelPngIctAndGsm</fullName>
    <active>true</active>
    <label>Digicel PNG ICT &amp; GSM</label>
</RecordType>