DigicielFull/force-app/main/default/objects/Contact/listViews/All_Barbados.listView-meta.xml
<ListView>
    <fullName>All_Barbados</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000000sdpo,012d0000000tAIf</value>
    </filters>
    <label>All Barbados</label>
    <language>en_US</language>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Technical</group>
        <group>Timba_Surveys_Barbados</group>
    </sharedTo>
</ListView>