DigicielFull/force-app/main/default/objects/Contact/listViews/All_British_Virgin_Islands_Contacts.listView-meta.xml
<ListView>
    <fullName>All_British_Virgin_Islands_Contacts</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000000tMIv</value>
    </filters>
    <label>*All British Virgin Islands Contacts</label>
    <sharedTo>
        <roleAndSubordinates>British_Virgin_Island</roleAndSubordinates>
    </sharedTo>
</ListView>