DigicielFull/force-app/main/default/objects/Contact/listViews/All_Contacts_Edited_Today.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Edited_Today</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Contacts Edited Today</label>
    <language>en_US</language>
</ListView>