DigicielFull/force-app/main/default/objects/Contact/listViews/All_Jamaica_GSM_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Jamaica_GSM_Contacts</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Digicel_Jamaica_Digicel_Business</value>
    </filters>
    <label>*All Jamaica GSM Contacts</label>
    <sharedTo>
        <roleAndSubordinates>Jamaica</roleAndSubordinates>
    </sharedTo>
</ListView>