DigicielFull/force-app/main/default/objects/Contact/listViews/All_Jamaica_ICT_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Jamaica_ICT_Contacts</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000000sdqM</value>
    </filters>
    <label>*All Jamaica ICT Contacts</label>
    <sharedTo>
        <roleAndSubordinates>Jamaica</roleAndSubordinates>
    </sharedTo>
</ListView>